--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "react-number-format": "^5.4.4",
     "shadcn": "^3.8.4",
     "tailwind-merge": "^3.4.0",
